Resolved font size increase to exclude portrait on tablets.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -253,12 +253,6 @@ footer p {
     line-height: 1.5em;
   }
   
-  .touch #body {
-    font-size: 1.4em;
-    line-height: 1.5em;
-    max-width: 940px;
-  }
-  
   header h1 {
     font-size: 6em;
     max-width: 960px;
@@ -312,7 +306,7 @@ footer p {
   
   #posts_nav.active li#next,
   #posts_nav.active li#previous {
-    opacity: 0.25;
+    opacity: 0.2;
   }
   
   .touch #next {
@@ -324,6 +318,12 @@ footer p {
 @media only screen and (min-width: 860px) {
   body {
     padding: 40px;
+  }
+  
+  .touch #body {
+    font-size: 1.4em;
+    line-height: 1.5em;
+    max-width: 940px;
   }
   
   .archives {
